--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html lang="en"> <!-- This is a comment! -->
-  <head> </head>
+  <head>
+    <title> This is the title </title>
+  </head>
   <body> </body>
 
 </html>
