--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en"> <!-- This is a comment! -->
   <head>
+    <link></link>
     <title> This is the title </title>
   </head>
   <body>
