--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en"> <!-- This is a comment! -->
   <head>
-    <link></link>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title> This is the title </title>
   </head>
   <body>
